Bug 1156503 - Update device name from |RemoteDevicePropertiesNotification| during discovery. r=shuang, a=kkuo